--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Block chain research",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-test": "nodemon dev-test"
+    "dev-test": "nodemon dev-test",
+    "test:jest": "jest"
   },
   "keywords": [],
   "author": "Vaclav Stummer",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^27.2.4",
     "nodemon": "^2.0.13"
+  },
+  "dependencies": {
+    "crypto-js": "^4.1.1"
   }
 }
