--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Block chain research",
   "main": "index.js",
   "scripts": {
-    "dev-test": "nodemon dev-test",
+    "dev-test": "nodemon src/dev-test",
     "test:jest": "jest"
   },
   "keywords": [],
